--- a/web-server/package.json
+++ b/web-server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js"
+    "start": "env-cmd -f./config/dev.env nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
     "postman-request": "^2.88.1-postman.33"
